--- a/face-verification.html
+++ b/face-verification.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Face Verification</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page-container service-page">
+        <div class="header-bar">
+            <a href="index.html"><button class="menu-button">←</button></a>
+            <span>Face Verification</span>
+            <span></span>
+        </div>
+        <div class="page-content">
+            <h2>Verify Your Face</h2>
+            <div class="face-verification-container">
+                <video id="faceVerificationVideo" autoplay playsinline></video>
+                <canvas id="faceVerificationCanvas" style="display:none;"></canvas>
+                <div class="face-frame"></div>
+                <p id="verificationInstruction">Position your face in the frame.</p>
+                <button id="verifyFaceButton" class="login-button disabled" disabled>Verify</button>
+                <div class="loading-spinner" id="loadingSpinner" style="display:none;"></div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
