--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Ng Globe</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page-container" id="loginPage">
+        <h1>Welcome to Ng Globe</h1>
+        <form id="loginForm" action="dashboard.html">
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit" class="signup-button">Sign Up</button>
+            <button type="submit" class="login-button">Log In</button>
+        </form>
+    </div>
+</body>
+</html>
