--- a/ng-transfer.html
+++ b/ng-transfer.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NG Transfer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page-container service-page">
+        <div class="header-bar">
+            <a href="dashboard.html"><button class="menu-button">←</button></a>
+            <span>NG Transfer</span>
+            <span></span>
+        </div>
+        <div class="page-content">
+            <h2>Transfer to Another User</h2>
+            <form id="ngTransferForm" action="#">
+                <div class="form-group">
+                    <label for="recipientId">Recipient Ng-Globe User ID/Phone:</label>
+                    <input type="text" id="recipientId" name="recipientId" placeholder="e.g., 08012345678" required>
+                </div>
 
+                <div class="form-group">
+                    <label for="transferAmount">Enter Amount (₦):</label>
+                    <input type="number" id="transferAmount" name="transferAmount" placeholder="e.g., 500" min="1" required>
+                </div>
+
+                <button type="submit" class="login-button">Send</button>
+                <a href="dashboard.html"><button type="button" class="login-button back-button">Cancel</button></a>
+            </form>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
