--- a/profile.html
+++ b/profile.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User Profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page-container profile-page">
+        <div class="header-bar">
+            <a href="dashboard.html"><button class="menu-button">←</button></a>
+            <span>User Profile</span>
+            <button class="settings-button"><i class="fas fa-cog"></i></button>
+        </div>
+
+        <div class="profile-content-scrollable">
+            <div class="profile-avatar-section">
+                <div class="avatar-container">
+                    <img src="https://via.placeholder.com/150/FFFFFF/000000?text=User" alt="User Avatar" id="profileAvatar">
+                    <button class="edit-avatar-button"><i class="fas fa-pencil-alt"></i></button>
+                </div>
+            </div>
+
+            <div class="profile-details-section">
+                <div class="detail-item">
+                    <span class="detail-label">Name :</span>
+                    <div class="detail-value-box">
+                        <span id="profileName">Your Name</span>
+                    </div>
+                </div>
+                <div class="detail-item">
+                    <span class="detail-label">Email :</span>
+                    <div class="detail-value-box">
+                        <span id="profileEmail">youremail@gmail.com</span>
+                    </div>
+                </div>
+            </div>
+            
+            <button class="logout-button">Log Out</button>
+
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
