--- a/transactions.html
+++ b/transactions.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Transactions</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page-container service-page">
+        <div class="header-bar">
+            <a href="dashboard.html"><button class="menu-button">←</button></a>
+            <span>Transactions</span>
+            <span></span>
+        </div>
+        <div class="page-content">
+            <div class="transactions-container">
+                <h2>Transaction History</h2>
+                <ul id="transactionList" class="transaction-list">
+                    </ul>
+                <p id="noTransactionsMessage" style="text-align:center; color:#666; margin-top:20px; display:none;">No transactions yet.</p>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
