--- a/withdraw-money.html
+++ b/withdraw-money.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Withdraw Money</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page-container service-page">
+        <div class="header-bar">
+            <a href="dashboard.html"><button class="menu-button">←</button></a>
+            <span>Withdraw Money</span>
+            <span></span>
+        </div>
+        <div class="page-content">
+            <h2>Withdraw from Your Wallet</h2>
+            <form id="withdrawForm" action="#">
+                <div class="form-group">
+                    <label>Choose Transfer Type:</label>
+                    <div class="transfer-type-selection">
+                        <div>
+                            <input type="radio" id="transferTypeNgGlobe" name="transferType" value="NgGlobe" required>
+                            <label for="transferTypeNgGlobe">
+                                <div class="transfer-type-icon-circle" style="background-color: #FFA500;"><i class="fas fa-arrow-right-arrow-left"></i></div>
+                                Ng-Globe
+                            </label>
+                        </div>
+                        <div>
+                            <input type="radio" id="transferTypeBank" name="transferType" value="Bank">
+                            <label for="transferTypeBank">
+                                <div class="transfer-type-icon-circle" style="background-color: #007bff;"><i class="fas fa-bank"></i></div>
+                                Bank
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="bankTransferFields" style="display: none;">
+                    <div class="form-group">
+                        <label for="accountNumber">Account Number:</label>
+                        <input type="text" id="accountNumber" name="accountNumber" placeholder="e.g., 0123456789">
+                    </div>
+                    <div class="form-group">
+                        <label for="bankName">Select Bank Name:</label>
+                        <select id="bankName" name="bankName">
+                            <option value="">-- Select Bank --</option>
+                            <option value="Access Bank">Access Bank</option>
+                            <option value="Zenith Bank">Zenith Bank</option>
+                            <option value="GTBank">GTBank</option>
+                            <option value="UBA">UBA</option>
+                            <option value="First Bank">First Bank</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Account Name:</label>
+                        <div id="accountNameDisplay" class="account-name-display">Auto-detects account name</div>
+                    </div>
+                </div>
+
+                <div id="ngGlobeTransferFields" style="display: none;">
+                    <div class="form-group">
+                        <label for="ngGlobeUserId">Ng-Globe User ID/Phone:</label>
+                        <input type="text" id="ngGlobeUserId" name="ngGlobeUserId" placeholder="e.g., 08012345678">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="withdrawAmount">Enter Amount (₦):</label>
+                    <input type="number" id="withdrawAmount" name="withdrawAmount" placeholder="e.g., 500" min="100" required>
+                </div>
+
+                <button type="submit" class="login-button">Send</button>
+                <a href="dashboard.html"><button type="button" class="login-button back-button">Cancel</button></a>
+            </form>
+        </div>
+    </div>
+
+    <div class="pin-modal-overlay" id="pinModal" style="display: none;">
+        <div class="pin-modal-content">
+            <h3>Enter Your 4-digit PIN</h3>
+            <input type="password" id="pinInput" maxlength="4" placeholder="••••">
+            <div class="modal-buttons">
+                <button class="confirm-button" id="confirmPinButton">Confirm</button>
+                <button class="cancel-button" id="cancelPinButton">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
